Delete unnecessary files for demo.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	<div id="note">Click the icon to make it stick</div>
 	<script src="zepto.min.js"></script>
 	<script src="demo.js"></script>
-	<script src="jquery-scroll-rotate.js"></script>
+	<script src="jquery-scroll-rotate.min.js"></script>
 	<script>
 		$('.rotate').scrollRotate();
 		$('.rotate.cc').scrollRotate({
